Scripts and figs for filter rise-time vs Cutt-off

--- a/Report.org
+++ b/Report.org
@@ -16,6 +16,14 @@ calculate the impulse response of the filter and use the fft to determine the fr
 *** TODO Share/modify plotting code
 - standard resolution
 - a standard aspect ratio
+** Ideas
+*** IDEA use file links in submission dir
+Rather than copying and pasting all of the required files into the submission directory use links.
+Need to know:
+- [ ] does compression works with
+- [ ] how does git deal with such links
+- [ ] how do other peoples computers deal with such links
+
 ** Submission
 *** Submission Naming Convention
 + Allowed to include any other files in submission *aside from* data files (since code is supposed to run in real time)
@@ -28,7 +36,7 @@ calculate the impulse response of the filter and use the fft to determine the fr
 | IIR Class python file      | rununittest.py                     |
 | Zip filename               | iir_2704250F_2391317R_2531525S.zip |
 |----------------------------+------------------------------------|
-*** Pre Submission checklist [/]
+*** Pre-Submission checklist [/]
 - [ ] final submission commit is made named "Final submission #n" where n is however long it takes us to get it right
 - [ ] all team participants pull this commit and extract the contents of the final commit zip to a directory of thier choosing
 - [ ] all team participants verify the [[*Submission  Naming Convention][Naming Convention]] of all files as well as the zip file itself
@@ -36,8 +44,10 @@ calculate the impulse response of the filter and use the fft to determine the fr
 - [ ] If possible also run the real-time plotting code
 - [ ] verify content of report PDF is satisfactory
 ** Report Question 1
-*** TODO Discuss influence of filter cut-off freq [/]:Ben:NoExport:
-- [ ] compare rise time of different filter designs
+*** TODO Investigate the influence of filter cut-off freq [1/4]:Ben:NoExport:
+- [X] compare rise time of different filter designs
+- [-] do an FFT of the Prerecorded filter signal to determine the frequency of the sensor noise
+- [ ] do fft of a pre-recorded gesture to see what frequencies are present
 - [ ] discuss importance of rise time of the impulse response
 *** TODO Create a data-flow diagram of the entire filter [/]:Ben:Peter:
 - [ ] get tkiz working
@@ -46,14 +56,6 @@ calculate the impulse response of the filter and use the fft to determine the fr
 ** Report Question 2
 ** Report Question 3
 ** Report Question 4
-
-** Ideas
-*** IDEA use file links in submission dir
-Rather than copying and pasting all of the required files into the submission directory use links.
-Need to know:
-- [ ] does compression works with
-- [ ] how does git deal with such links
-- [ ] how do other peoples computers deal with such links
 
 * Table Of contents :TOC_3:NoExport:
 - [[#introduction][Introduction]]
